--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,11 @@ jobs:
     - name: Commit files
       run: |
         cd ./ship
+        ls
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "Add changes" -a
+        git add .
+        git commit -m "Add changes"
 
     - name: Push changes
       uses: ad-m/github-push-action@master
