--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,6 @@ jobs:
       
     - name: Commit files
       run: |
-        cd ./ship
-        ls
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
@@ -29,4 +27,5 @@ jobs:
       with:
         github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
         branch: 'main'
+        directory: './ship'
         repository: 'Oigen43/ga-master'
