--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Commit files
       run: |
         cd ship
+        ls
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
@@ -29,4 +30,4 @@ jobs:
         github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
         force: true
         branch: 'main'
-        repository: 'Oigen43/ga-master'
+        repository: 'Oigen43/ga-test'
