--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,14 @@ jobs:
       
     - name: Commit files
       run: |
+        ls
         cd ship
         ls
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
         git commit -m "Add changes"
+        git log
 
     - name: Push changes
       uses: ad-m/github-push-action@master
