--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    
+    - uses: actions/checkout@v2
+      with:
+        repository: 'Oigen43/ga-test'
+        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
 
     - name: Build ship
       run: |
-        ls
+        rm -rf * .!(|.|git)
         { echo 'ship'; echo 'Koa'; echo 'React'; } | bash <(curl -s https://raw.githubusercontent.com/paralect/ship-merge/master/ship-merge.sh)
       
     - name: Commit files
