--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
       run: |
         rm -rf * ".!(|.|git)"
         { echo 'ship'; echo 'Koa'; echo 'React'; } | bash <(curl -s https://raw.githubusercontent.com/paralect/ship-merge/master/ship-merge.sh)
-        cd ship
       
     - name: Commit files
       run: |
+        cd ship
         ls
         git fetch
         git config --local user.email "action@github.com"
@@ -36,5 +36,6 @@ jobs:
       with:
         github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
         force: true
+        directory: 'ship'
         branch: 'main'
         repository: 'Oigen43/ga-test'
