--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,5 @@ jobs:
         github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
         force: true
         branch: 'main'
+        directory: 'ship'
         repository: 'Oigen43/ga-test'
