--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,11 @@ jobs:
       run: |
         { echo 'ship'; echo 'Koa'; echo 'React'; } | bash <(curl -s https://raw.githubusercontent.com/paralect/ship-merge/master/ship-merge.sh)
       
+    - name: cd
+      run: cd ship
+      
     - name: Commit files
       run: |
-        cd ship
-        ls
         git init
         git remote add origin https://github.com/Oigen43/ga-test.git
         git config --local user.email "action@github.com"
