--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
 
     - name: Build ship
-      run: |
-        { echo 'ship'; echo 'Koa'; echo 'React'; } | bash <(curl -s https://raw.githubusercontent.com/paralect/ship-merge/master/ship-merge.sh)
+      run: "{ echo 'ship'; echo 'Koa'; echo 'React'; } | bash <(curl -s https://raw.githubusercontent.com/paralect/ship-merge/master/ship-merge.sh)"
           
     - name: Commit files
       run: |
+        echo 111
         cd ship
         ls
         git init
@@ -23,6 +23,9 @@ jobs:
         git config --local user.name "GitHub Action"
         git add .
         git commit -m "Add changes"
+
+    - name: echooo
+      run: echo 2
 
     - name: Push changes
       uses: ad-m/github-push-action@master
