--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,6 @@ jobs:
       with:
         github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
         force: true
+        directory: 'ship'
         branch: 'main'
         repository: 'Oigen43/ga-test'
